@@ -1,5 +1,5 @@
 #!/bin/sh
-# $Cambridge: exim/exim-src/scripts/MakeLinks,v 1.11 2007/06/26 11:16:54 ph10 Exp $
+# $Cambridge: exim/exim-src/scripts/MakeLinks,v 1.12 2007/08/23 10:16:51 ph10 Exp $
 
 # Script to build links for all the exim source files from the system-
 # specific build directory. It should be run from within that directory.
@@ -95,6 +95,7 @@ ln -s ../../src/lookups/whoson.c         whoson.c
 ln -s ../../src/lookups/lf_functions.h   lf_functions.h
 ln -s ../../src/lookups/lf_check_file.c  lf_check_file.c
 ln -s ../../src/lookups/lf_quote.c       lf_quote.c
+ln -s ../../src/lookups/lf_sqlperform.c  lf_sqlperform.c
 
 cd ..
 
